# perception-platform

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_annotation_dataset.sh  run_unitrain.sh
cli/: eval.py  export.py  predict.py  train.py
configs/algorithms/: sam2.yaml
configs/pipelines/: annotation_dataset.yaml  annotation_to_unitrain.yaml
configs/runtime/: server.yaml
configs/training/: rfdetr_seg_nano.yaml
datasets/: manifest.py
docs/superpowers/plans/: 2026-07-07-annotation-to-unitrain.md  2026-07-09-cli-docs-help.md
docs/superpowers/specs/: 2026-07-09-cli-docs-help-design.md
envs/: rfdetr.txt
pipeline/: cli.py  config.py  manifest.py  pipeline.py  presets.yaml
pipeline/stages/: __init__.py  annotation_dataset.py  base.py  context.py  masks.py  sam2_video.py  training.py
registry/: classes.json
tasks/example_task/: task.yaml
tests/: test_annotation_to_unitrain_orchestration.py  test_coco_export_and_video_input.py  test_dataset_manifest.py  test_standalone_layout.py  test_training_stages.py  test_unitrain_migration.py
tools/sam2/: sam2_pic_cli.py  sam2_video_cli.py
